syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service HelloWorld {
  rpc GetLeader(GetLeaderRequest) returns (GetLeaderReply){}
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc BatchSayHello (BatchRequest) returns (BatchReply) {}

  rpc AddPeer(AddPeerRequest) returns (AddPeerReply){}
  rpc RemovePeer(RemovePeerRequest) returns (RemovePeerReply){}
}

// The request message containing the user's name.
message HelloRequest {
  string groupId = 1;
  bytes key = 2;
  bytes value = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message GetLeaderRequest{
  string groupId = 1;
}

message GetLeaderReply{
  string groupId = 1;
  string leader = 2;
}

message BatchRequest{
  repeated string message = 1;
}

message BatchReply{

}

message AddPeerRequest{
  string groupId = 1;
  string address = 2;
}

message AddPeerReply{

}

message RemovePeerRequest{
  string groupId = 1;
  string address = 2;
}

message RemovePeerReply{

}